--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/addons/p5.sound.js"></script>
-    <link rel="stylesheet" type="text/css" href="./lib/style.css">
+    <link rel="stylesheet" type="text/css" href="/lib/style.css">
     <meta charset="utf-8" />
     
   </head>
   <body>
-    <script src="./lib/sketch.js"></script>
+    <script src="/lib/sketch.js" type="text/javascript"></script>
     <script src="//cdn.jsdelivr.net/npm/planck-js@latest/dist/planck.js"></script>
     <script src="https://rawgit.com/bobcgausa/cook-js/master/p2.js"></script>
   </body>
